--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -79,11 +79,51 @@
   <!--</a>-->
 </div>
 
+
+<section id="features" class="container services">
+  <div class="row">
+    <div class="col-sm-3">
+      <h2>Storing in that "folder" ?</h2>
+      <p>Seriously. It's the future. It's time for you to migrate to the cloud.
+        Storing your certifications in one place ensures that you have an accurate record.
+        You should keep all of the classes and certifications you have in a safe and secure area.
+        Accessible from ANY device.
+      </p>
+      <!--<p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>-->
+    </div>
+    <div class="col-sm-3">
+      <h2>Looking for a class ?</h2>
+      <p>If you're like any of us, looking for CEUs usually involves posting on social media, seeing what our employers
+        are offering, or searching through every PDF printout of training sites in the area. We were tired of that. Use
+        our search engine... it'll blow your socks off.
+
+      </p>
+      <!--<p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>-->
+    </div>
+    <div class="col-sm-3">
+      <h2>Job Board</h2>
+      <p>Our Advanced Placement Job Board is still under construction.
+        But, we do have a section where you can see current openings.
+
+      </p>
+    </div>
+    <div class="col-sm-3">
+      <h2>Missing Something?</h2>
+      <p>
+        We love hearing from you. We would like to know what you need to be better.
+        Is one of your tools not working as
+        you want it to? We can build it for you.
+
+      </p>
+      <!--<p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>-->
+    </div>
+  </div>
+</section>
+
 <section id="social-media">
   <div class="row">
     <div class="col-lg-12 text-center">
       <div>
-        <div class="navy-line"></div>
         <h4 class="widget-title">Follow us</h4>
         <ul class="social-nav social-center">
           <li>
@@ -95,10 +135,10 @@
           <li>
             <a href="https://www.instagram.com/respondersnow" target="_blank" title="Instagram" rel="nofollow" class="google"><i class="fab fa-instagram"></i></a>
           </li>
-          <!--<li>-->
-          <!--<a href="#" target="_blank" title="Linkedin" rel="nofollow" class="linkedin"><i class="fa fa-linkedin"></i></a>-->
-          <!--</li>-->
-          <!--<li>-->
+          <!--      <li>-->
+          <!--            <a href="#" target="_blank" title="Linkedin" rel="nofollow" class="linkedin"><i class="fas fa-linkedin"></i></a>-->
+          <!--          </li>-->
+          <!--          <!--<li>-->
           <!--<a href="#" target="_blank" title="Pinterest" rel="nofollow" class="pinterest"><i class="fa fa-pinterest"></i></a>-->
           <!--</li>-->
         </ul>
@@ -106,43 +146,7 @@
     </div>
   </div>
 </section>
-
-<section id="features" class="container services">
-  <div class="row">
-    <div class="col-sm-3">
-      <h2>Storing in that "folder" ?</h2>
-      <p>Seriously. It the future. It time for you to migrate to the cloud.
-        Storing your certifications in one place ensures that you have an accurate record.
-        You should keep all of the classes and certificatiosn you have in a safe and secure area.
-        Accessable form ANY device.
-      </p>
-      <!--<p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>-->
-    </div>
-    <div class="col-sm-3">
-      <h2>Looking for a class ?</h2>
-      <p>If you're like any of us, looking for CEUs usually involves posting on social media,
-        seeing what our employers are offering, or searching thorugh every PDF printout of academys in the area.
-        We were tired of that. Use our search engine... it'll blow your socks off.
-      </p>
-      <!--<p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>-->
-    </div>
-    <div class="col-sm-3">
-      <h2>Job Board</h2>
-      <p>Our Advanced Placement Job Board is still under contruction.
-        But, we do have a section where you can see current openings.
-      </p>
-    </div>
-    <div class="col-sm-3">
-      <h2>Missing Something?</h2>
-      <p>
-        We love hearing from you. We would like to know what you need to be better.
-        Is one of your tools not working as you want it to? We can build it for you.
-      </p>
-      <!--<p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>-->
-    </div>
-  </div>
-</section>
-
+<hr>
 <section class="container features">
   <div class="row">
     <div class="col-lg-12 text-center">
@@ -690,9 +694,6 @@
 <!--footer-->
 
 <div class="navy-line"></div>
-<br>
-<br>
-<br>
 <!--<footer class="footer1">-->
 <!--<div class="container">-->
 
