--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -18,119 +18,242 @@
   <section>
     <div class="row">
       <div class="col-md-9">
-        <div class="panel panel-info">
-          <div class="panel-heading">
-            <h5 class="panel-title">Search Classes</h5>
-          </div>
-          <div class="panel-body">
-            <div class="input-group stylish-input-group">
-              <input type="text" class="form-control" placeholder="Search">
-              <span class="input-group-addon">
-                <button type="submit">
-                  <span class="fas fa-search"></span>
-                </button>
-              </span>
-            </div>
-          </div>
-        </div>
+        <!--        <div class="panel panel-info">-->
+        <!--          <div class="panel-heading">-->
+        <!--            <h5 class="panel-title">Search Classes</h5>-->
+        <!--          </div>-->
+        <!--          <div class="panel-body">-->
+        <!--            <div class="input-group stylish-input-group">-->
+        <!--              <input type="text" class="form-control" placeholder="Search">-->
+        <!--              <span class="input-group-addon">-->
+        <!--                <button type="submit">-->
+        <!--                  <span class="fas fa-search"></span>-->
+        <!--                </button>-->
+        <!--              </span>-->
+        <!--            </div>-->
+        <!--          </div>-->
+        <!--        </div>-->
+        <!--      </div>-->
+        <div class="col-md-3"></div>
       </div>
-    </div>
-    <div class="col-md-3"></div>
   </section>
   <section>
     <div class="row">
-      <div class="col-md-9">
-        <div class="panel panel-info">
-          <div class="panel-heading">
-            <h5 class="panel-title">Upcoming Classes within 10 Miles of 08902</h5>
-          </div>
-          <div class="panel-body">
-            <table class="table table-hover no-margins">
-              <thead>
-              <tr>
-                <th>Status</th>
-                <th>Date</th>
-                <th>Class</th>
-                <th>Location</th>
-                <th></th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <td>
-                  <small>open</small>
-                </td>
-                <td><i class="far fa-clock"></i> 11-10 11:20pm</td>
-                <td>CPR</td>
-                <td class="text-navy">North Brunswick, NJ</td>
-                <td><a href="">register</a></td>
-              </tr>
-              <tr>
-                <td>
-                  <small>open</small>
-                </td>
-                <td><i class="far fa-clock"></i> 11-10 11:20pm</td>
-                <td>TCCC</td>
-                <td class="text-navy">Camden, NJ</td>
-                <td><a href="">register</a></td>
-              </tr>
-              <tr>
-                <td>
-                  <small>open</small>
-                </td>
-                <td><i class="far fa-clock"></i> 11-12 11:20pm</td>
-                <td>CPR</td>
-                <td class="text-navy">North Brunswick, NJ</td>
-                <td><a href="">register</a></td>
-              </tr>
-              <tr>
-                <td>
-                  <small>open</small>
-                </td>
-                <td><i class="far fa-clock"></i> 11-12 11:20pm</td>
-                <td>CPR</td>
-                <td class="text-navy">North Brunswick, NJ</td>
-                <td><a href="">register</a></td>
-              </tr>
-              <tr>
-                <td>
-                  <small>open</small>
-                </td>
-                <td><i class="far fa-clock"></i> 11-12 11:20pm</td>
-                <td>First Aid</td>
-                <td class="text-navy">North Brunswick, NJ</td>
-                <td><a href="">register</a></td>
-              </tr>
-              <tr>
-                <td>
-                  <small>open</small>
-                </td>
-                <td><i class="far fa-clock"></i> 12-12 11:20pm</td>
-                <td>Etrication I</td>
-                <td class="text-navy">North Brunswick, NJ</td>
-                <td><a href="">register</a></td>
-              </tr>
+      <!--      <div class="col-md-9">-->
+      <!--        <div class="panel panel-info">-->
+      <!--          <div class="panel-heading">-->
+      <!--            <h5 class="panel-title">Upcoming Classes within 10 Miles of 08902</h5>-->
+      <!--          </div>-->
+      <!--          <div class="panel-body">-->
+      <!--            <table class="table table-hover no-margins">-->
+      <!--              <thead>-->
+      <!--              <tr>-->
+      <!--                <th>Status</th>-->
+      <!--                <th>Date</th>-->
+      <!--                <th>Class</th>-->
+      <!--                <th>Location</th>-->
+      <!--                <th></th>-->
+      <!--              </tr>-->
+      <!--              </thead>-->
+      <!--              <tbody>-->
+      <!--              <tr>-->
+      <!--                <td>-->
+      <!--                  <small>open</small>-->
+      <!--                </td>-->
+      <!--                <td><i class="far fa-clock"></i> 11-10 11:20pm</td>-->
+      <!--                <td>CPR</td>-->
+      <!--                <td class="text-navy">North Brunswick, NJ</td>-->
+      <!--                <td><a href="">register</a></td>-->
+      <!--              </tr>-->
+      <!--              <tr>-->
+      <!--                <td>-->
+      <!--                  <small>open</small>-->
+      <!--                </td>-->
+      <!--                <td><i class="far fa-clock"></i> 11-10 11:20pm</td>-->
+      <!--                <td>TCCC</td>-->
+      <!--                <td class="text-navy">Camden, NJ</td>-->
+      <!--                <td><a href="">register</a></td>-->
+      <!--              </tr>-->
+      <!--              <tr>-->
+      <!--                <td>-->
+      <!--                  <small>open</small>-->
+      <!--                </td>-->
+      <!--                <td><i class="far fa-clock"></i> 11-12 11:20pm</td>-->
+      <!--                <td>CPR</td>-->
+      <!--                <td class="text-navy">North Brunswick, NJ</td>-->
+      <!--                <td><a href="">register</a></td>-->
+      <!--              </tr>-->
+      <!--              <tr>-->
+      <!--                <td>-->
+      <!--                  <small>open</small>-->
+      <!--                </td>-->
+      <!--                <td><i class="far fa-clock"></i> 11-12 11:20pm</td>-->
+      <!--                <td>CPR</td>-->
+      <!--                <td class="text-navy">North Brunswick, NJ</td>-->
+      <!--                <td><a href="">register</a></td>-->
+      <!--              </tr>-->
+      <!--              <tr>-->
+      <!--                <td>-->
+      <!--                  <small>open</small>-->
+      <!--                </td>-->
+      <!--                <td><i class="far fa-clock"></i> 11-12 11:20pm</td>-->
+      <!--                <td>First Aid</td>-->
+      <!--                <td class="text-navy">North Brunswick, NJ</td>-->
+      <!--                <td><a href="">register</a></td>-->
+      <!--              </tr>-->
+      <!--              <tr>-->
+      <!--                <td>-->
+      <!--                  <small>open</small>-->
+      <!--                </td>-->
+      <!--                <td><i class="far fa-clock"></i> 12-12 11:20pm</td>-->
+      <!--                <td>Etrication I</td>-->
+      <!--                <td class="text-navy">North Brunswick, NJ</td>-->
+      <!--                <td><a href="">register</a></td>-->
+      <!--              </tr>-->
 
-              </tbody>
-            </table>
+      <!--              </tbody>-->
+      <!--            </table>-->
+      <!--          </div>-->
+      <!--        </div>-->
+      <!--      </div>-->
+      <div class="col-md-9">
+        <div class="ibox float-e-margins">
+          <div class="ibox-title">
+            <h5><i class="fas fa-info-circle"></i> Primary Professional Certifications</h5>
+
+            <button
+              type="button"
+              data-toggle="modal"
+              data-target="#primary-certification"
+              class="pull-right">
+              <i class="fa fa-plus"></i> Add
+            </button>
+            <div class="col-lg-4">
+              <style>
+                .center-btn {
+                  display: flex;
+                  justify-content: center;
+                }
+              </style>
+              <!-- Trigger the modal with a button -->
+              <!-- Modal -->
+              <div id="primary-certification" class="modal fade" role="dialog">
+                <%= simple_form_for :new_cert,
+                                    url: acquired_certifications_path,
+                                    method: :post,
+                                    defaults: {inner_html: 'form-control'} do |f| %>
+                  <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Add New Professional Certification / License</h4>
+                      </div>
+
+                      <div class="modal-body">
+                        <%= f.input :certification, collection: Certification.primaries %>
+                        <%= f.input :state, collection: us_states %>
+                        <%= f.input :number %>
+                        <div class="form-group">
+                          <%= f.input :aquired_on, as: :date, start_year: Date.today.year - 50,
+                                      end_year: Date.today.year, discard_day: true,
+                                      order: [:month, :year], label: 'Aquired On', id: 'wh-end-date' %>
+
+                          <%= f.input :expires,
+                                      label: "Does this Expire ?",
+                                      id: 'does-it-exipre',
+                                      as: :select,
+                                      selected: false,
+                                      checked_value: "NO",
+                                      unchecked_value: "YES" %>
+
+
+                          <%= f.input :expires_on, as: :date, start_year: Date.today.year + 10, end_year: Date.today.year,
+                                      discard_day: true, order: [:month, :year], label: 'Expires On', id: 'wh-end-date expires-date', inner_html: 'hidden',
+                                      required: false
+                          %></li>
+                          <div>
+
+                            <%= f.input :file, as: :file, required: false, inner_html: 'btn btn-default btn-block btn-file' %>
+                          </div>
+                          <div class="modal-footer">
+                            <%= f.submit "Save", class: 'btn btn-success' %>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+              </div> <!-- END OF COL/-->
+
+
+            </div>
+            <div class="ibox-content">
+              <div>
+                <div class="feed-activity-list">
+                  <!--              //-->
+                  <% current_user.acquired_certifications.each do |cert| %>
+                    <div class="feed-element">
+                      <a href="#" class="pull-left">
+                        <img alt="image" class='img-circle' src="<%= image_path(cert.patch_image_name) %>">
+                        <strong>NR <%= cert.abbvr %> # 12345 </strong>
+                        <i class="far fa-id-card"></i>
+                      </a>
+                      <div class="media-body ">
+
+                      </div>
+                    </div>
+                  <% end %>
+
+                  <!--              //-->
+                  <div class="feed-element">
+                    <a href="#" class="pull-left">
+                      <img alt="image" class='img-circle' src="<%= image_path('patches/nj-emt.png') %>">
+                      <strong>NJ EMT # 586908 </strong>
+                    </a>
+                    <div class="media-body ">
+
+                    </div>
+                  </div>
+
+                  <div class="feed-element">
+                    <a href="#" class="pull-left">
+                      <img alt="image" class='img-circle' src="<%= image_path('patches/nj-micu.png') %>">
+                      <strong>NJ MICP # 101012 </strong>
+                    </a>
+                    <div class="media-body ">
+
+                    </div>
+                  </div>
+
+                  <div class="feed-element">
+                    <a href="#" class="pull-left">
+                      <img alt="image" class='img-circle' src="<%= image_path('patches/nj-ff.jpg') %>">
+                      <strong>NJ Fire Fighter # 54321 </strong>
+                    </a>
+                    <div class="media-body ">
+
+                    </div>
+                  </div>
+                  <!-- END OF CERTS //-->
+                </div>
+              </div>
+            </div>
           </div>
+        </div>
+        <div class="col-md-3">
+          <div class="1234"></div>
+          <%= google_adsense_include_tag client: 'ca-pub-7581132771547508', slot: '1234', enable_page_level_ads: true %>
         </div>
       </div>
     </div>
-    <div class="col-md-3">
-      <div class="1234"></div>
-      <%= google_adsense_include_tag client: 'ca-pub-7581132771547508', slot: '1234', enable_page_level_ads: true %>
-    </div>
-</div>
 </div>
 
+<script type="text/javascript" charset="utf-8">
+    $('.new_cert_expires_on').toggleClass('hidden')
 
-
-
-<!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
-<!--<script>-->
-<!--    (adsbygoogle = window.adsbygoogle || []).push({-->
-<!--        google_ad_client: "ca-pub-7581132771547508",-->
-<!--        enable_page_level_ads: true-->
-<!--    });-->
-<!--</script>-->
+    $('.new_cert_expires').change(function () {
+        $('.new_cert_expires_on').toggleClass('hidden')
+    })
+</script>
