--- a/app/views/users/_user_metrics.html.erb
+++ b/app/views/users/_user_metrics.html.erb
@@ -7,10 +7,30 @@
       </div>
       <div class="panel-body">
         <h1 class="no-margins">
-          <%= current_user.zipcode if current_user.zipcode %>
+          <div class="input-group">
+            <%= simple_form_for current_user, wrapper: :vertical_form,
+                                wrapper_mappings: {
+                                    check_boxes: :horizontal_radio_and_checkboxes,
+                                    radio_buttons: :horizontal_radio_and_checkboxes,
+                                    file: :horizontal_file_input,
+                                    boolean: :horizontal_boolean
+                                } do |f| %>
+              <div class="form-inputs">
+                <%= f.input :zipcode,
+                            class: "form-control",
+                            label: false,
+                            id: 'zipcode-input responder_zipcode',
+                            input_html: {pattern: '[0-9]{4}'},
+                            placeholder: current_user.zipcode || '' %>
+
+                <small><%= f.submit "Update", class: 'btn btn-xs' %></small>
+                <div class="text-error"></div>
+                <div id="city-state"></div>
+            <% end %>
+            </div>
         </h1>
         <!--<div class="stat-percent font-bold text-success">top 10% <i class="fa fa-bolt"></i></div>-->
-        <small>click here to <a href="">update</a>.</small>
+
       </div>
     </div>
   </div>
@@ -23,9 +43,13 @@
       <div class="panel-body">
         <h1 class="no-margins">
           <h1 class="no-margins">
-            <%= current_user.acquired_certifications.count if current_user.acquired_certifications.any? %>
+            <% if current_user.acquired_certifications.any? %>
+              <%= current_user.acquired_certifications.count %>
+            <% else %>
+              None
+            <% end %>
           </h1>
-          <div class="stat-percent font-bold text-success"><i class="fa fa-bolt"></i> top 10% in your area</div>
+<!--          <div class="stat-percent font-bold text-success"><i class="fa fa-bolt"></i> top 10% in your area</div>-->
           <small>uploaded</small>
         </h1>
         <small>click here to <a href="">update</a>.</small>
