--- a/app/views/certifications/new.html.erb
+++ b/app/views/certifications/new.html.erb
@@ -17,42 +17,47 @@
 
 
 <div class="row">
-  <div class="col-lg-12">
-    <div class="ibox float-e-margins">
-      <div class="ibox-title">
-        <h5>
-          <small>New</small>
-        </h5>
-        <div class="ibox-tools">
-          <a class="collapse-link">
-            <i class="fa fa-chevron-up"></i>
-          </a>
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            <i class="fa fa-wrench"></i>
-          </a>
-          <ul class="dropdown-menu dropdown-user">
-            <li><a href="#">Config option 1</a>
-            </li>
-            <li><a href="#">Config option 2</a>
-            </li>
-          </ul>
-          <a class="close-link">
-            <i class="fa fa-times"></i>
-          </a>
-        </div>
+  <hr>
+  <div class="col-lg-2"></div>
+  <div class="col-lg-8">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h5 class="panel-title">Add New Certification</h5>
       </div>
-      <div class="ibox-content" style="min-height: 200px">
-        <%= simple_form_for @certification, class: "form-horizontal" do |f| %>
-          <div class="form-group"><label class="col-sm-2 control-label">Course Name</label>
+      <div class="panel-body">
+        <%= simple_form_for @certification, class: "form-horizontal", defaults: {label: false, inner_html: 'form-control'} do |f| %>
+          <div class="form-group"><label class="col-sm-2 control-label">Course or Certification Name</label>
             <div class="col-sm-10">
-              <%= f.input :name, class: 'form-control', label: false %>
+              <%= f.input :name %>
             </div>
           </div>
           <div class="form-group"><label class="col-sm-2 control-label">Course Code</label>
             <div class="col-sm-10">
-              <%= f.input :course_code, class: 'form-control', label: false %>
+              <%= f.input :course_code, collection: Certification::CODES %>
             </div>
           </div>
+          <div class="form-group"><label class="col-sm-2 control-label">Primary Certification?</label>
+            <div class="col-sm-10">
+              <%= f.input :primary,
+                          as: :select,
+                          selected: false,
+                          checked_value: "NO",
+                          unchecked_value: "YES" %>
+            </div>
+          </div>
+
+          <div class="form-group"><label class="col-sm-2 control-label">Abbreviation</label>
+            <div class="col-sm-10">
+              <%= f.input :abbvr, required: false %>
+            </div>
+          </div>
+
+          <div class="form-group"><label class="col-sm-2 control-label">Logo</label>
+            <div class="col-sm-10">
+              <%= f.input :logo, as: :file, required: false %>
+            </div>
+          </div>
+
 
           <div class="form-group">
             <div class="col-sm-4 col-sm-offset-2">
@@ -69,5 +74,5 @@
 
     </p>
   </div>
-
+  <div class="col-lg-2"></div>
 </div>
