--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -138,122 +138,89 @@
               <!-- Trigger the modal with a button -->
               <!-- Modal -->
               <div id="primary-certification" class="modal fade" role="dialog">
-                <%= simple_form_for :new_cert,
-                                    url: acquired_certifications_path,
-                                    method: :post,
-                                    defaults: {inner_html: 'form-control'} do |f| %>
-                  <div class="modal-dialog">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Add New Professional Certification / License</h4>
-                      </div>
+                <div class="modal-dialog">
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h4 class="modal-title">Add New Professional Certification / License</h4>
+                    </div>
 
-                      <div class="modal-body">
-                        <%= f.input :certification, collection: Certification.primaries %>
-                        <%= f.input :state, collection: us_states %>
-                        <%= f.input :number %>
-                        <div class="form-group">
-                          <%= f.input :aquired_on, as: :date, start_year: Date.today.year - 50,
-                                      end_year: Date.today.year, discard_day: true,
-                                      order: [:month, :year], label: 'Aquired On', id: 'wh-end-date' %>
+                    <div class="modal-body">
+                      <%= render partial: 'certifications/form', locals: {primary: true} %>
+                    </div>
+                    <div class="modal-footer">
 
-                          <%= f.input :expires,
-                                      label: "Does this Expire ?",
-                                      id: 'does-it-exipre',
-                                      as: :select,
-                                      selected: false,
-                                      checked_value: "NO",
-                                      unchecked_value: "YES" %>
-
-
-                          <%= f.input :expires_on, as: :date, start_year: Date.today.year + 10, end_year: Date.today.year,
-                                      discard_day: true, order: [:month, :year], label: 'Expires On', id: 'wh-end-date expires-date', inner_html: 'hidden',
-                                      required: false
-                          %></li>
-                          <div>
-
-                            <%= f.input :file, as: :file, required: false, inner_html: 'btn btn-default btn-block btn-file' %>
-                          </div>
-                          <div class="modal-footer">
-                            <%= f.submit "Save", class: 'btn btn-success' %>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                          </div>
-                        </div>
-                      </div>
+                      <button type="button" class="btn btn-danger" data-dismiss="modal">
+                        <i class="fas fa-ban"></i> Cancel
+                      </button>
                     </div>
                   </div>
-                <% end %>
-              </div> <!-- END OF COL/-->
-
-
-            </div>
-            <div class="ibox-content">
-              <div>
-                <div class="feed-activity-list">
-                  <!--              //-->
-                  <% current_user.acquired_certifications.each do |cert| %>
-                    <div class="feed-element">
-                      <a href="#" class="pull-left">
-                        <img alt="image" class='img-circle' src="<%= image_path(cert.patch_image_name) %>">
-                        <strong>NR <%= cert.abbvr %> # 12345 </strong>
-                        <i class="far fa-id-card"></i>
-                      </a>
-                      <div class="media-body ">
-
-                      </div>
-                    </div>
-                  <% end %>
-
-                  <!--              //-->
-                  <div class="feed-element">
-                    <a href="#" class="pull-left">
-                      <img alt="image" class='img-circle' src="<%= image_path('patches/nj-emt.png') %>">
-                      <strong>NJ EMT # 586908 </strong>
-                    </a>
-                    <div class="media-body ">
-
-                    </div>
-                  </div>
-
-                  <div class="feed-element">
-                    <a href="#" class="pull-left">
-                      <img alt="image" class='img-circle' src="<%= image_path('patches/nj-micu.png') %>">
-                      <strong>NJ MICP # 101012 </strong>
-                    </a>
-                    <div class="media-body ">
-
-                    </div>
-                  </div>
-
-                  <div class="feed-element">
-                    <a href="#" class="pull-left">
-                      <img alt="image" class='img-circle' src="<%= image_path('patches/nj-ff.jpg') %>">
-                      <strong>NJ Fire Fighter # 54321 </strong>
-                    </a>
-                    <div class="media-body ">
-
-                    </div>
-                  </div>
-                  <!-- END OF CERTS //-->
                 </div>
               </div>
             </div>
-          </div>
+
+          </div> <!-- END OF COL/-->
+
+
         </div>
-        <div class="col-md-3">
-          <div class="1234"></div>
-          <%= google_adsense_include_tag client: 'ca-pub-7581132771547508', slot: '1234', enable_page_level_ads: true %>
+        <div class="ibox-content">
+          <div>
+            <div class="feed-activity-list">
+              <!--              //-->
+              <% current_user.acquired_certifications.each do |cert| %>
+                <div class="feed-element">
+                  <a href="#" class="pull-left">
+                    <img alt="image" class='img-circle' src="<%= image_path(cert.patch_image_name) %>">
+                    <strong>NR <%= cert.abbvr %> # 12345 </strong>
+                    <i class="far fa-id-card"></i>
+                  </a>
+                  <div class="media-body ">
+
+                  </div>
+                </div>
+              <% end %>
+
+              <!--              //-->
+              <div class="feed-element">
+                <a href="#" class="pull-left">
+                  <img alt="image" class='img-circle' src="<%= image_path('patches/nj-emt.png') %>">
+                  <strong>NJ EMT # 586908 </strong>
+                </a>
+                <div class="media-body ">
+
+                </div>
+              </div>
+
+              <div class="feed-element">
+                <a href="#" class="pull-left">
+                  <img alt="image" class='img-circle' src="<%= image_path('patches/nj-micu.png') %>">
+                  <strong>NJ MICP # 101012 </strong>
+                </a>
+                <div class="media-body ">
+
+                </div>
+              </div>
+
+              <div class="feed-element">
+                <a href="#" class="pull-left">
+                  <img alt="image" class='img-circle' src="<%= image_path('patches/nj-ff.jpg') %>">
+                  <strong>NJ Fire Fighter # 54321 </strong>
+                </a>
+                <div class="media-body ">
+
+                </div>
+              </div>
+              <!-- END OF CERTS //-->
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    <div class="col-md-3">
+      <div class="1234"></div>
+      <%= google_adsense_include_tag client: 'ca-pub-7581132771547508', slot: '1234', enable_page_level_ads: true %>
+    </div>
 </div>
-
-<script type="text/javascript" charset="utf-8">
-    $('.new_cert_expires_on').toggleClass('hidden')
-
-    $('.new_cert_expires').change(function () {
-        $('.new_cert_expires_on').toggleClass('hidden')
-    })
-</script>
+</div>
+</div>
