[add-job-posting][ RJ ] added some modals

--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -16,24 +16,24 @@
   <section>
     <div class="row">
       <div class="col-md-9">
-        <!--        <div class="panel panel-info">-->
-        <!--          <div class="panel-heading">-->
-        <!--            <h5 class="panel-title">Search Classes</h5>-->
-        <!--          </div>-->
-        <!--          <div class="panel-body">-->
-        <!--            <div class="input-group stylish-input-group">-->
-        <!--              <input type="text" class="form-control" placeholder="Search">-->
-        <!--              <span class="input-group-addon">-->
-        <!--                <button type="submit">-->
-        <!--                  <span class="fas fa-search"></span>-->
-        <!--                </button>-->
-        <!--              </span>-->
-        <!--            </div>-->
-        <!--          </div>-->
-        <!--        </div>-->
-        <!--      </div>-->
-        <div class="col-md-3"></div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h5 class="panel-title">Search Classes</h5>
+          </div>
+          <div class="panel-body">
+            <div class="input-group stylish-input-group">
+              <input type="text" class="form-control" placeholder="Course search coming soon!">
+              <span class="input-group-addon">
+                        <button type="submit">
+                          <span class="fas fa-search"></span>
+                        </button>
+                      </span>
+            </div>
+          </div>
+        </div>
       </div>
+      <div class="col-md-3"></div>
+    </div>
   </section>
   <section>
     <div class="row">
