--- a/app/views/users/certifications.html.erb
+++ b/app/views/users/certifications.html.erb
@@ -11,7 +11,7 @@
     </ol>
   </div>
 </div>
-<div class="wrapper wrapper-content  animated fadeInRight">
+<div class="wrapper wrapper-content">
   <div class="row">
     <div class="col-lg-8">
       <div class="panel panel-primary">
@@ -44,18 +44,58 @@
               <tbody>
               <% current_user.acquired_certifications.each do |cert| %>
                 <tr class="gradeX">
+                  <div id="<%= cert.id %>" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                          <h4 class="modal-title"><%= cert.certification.name %></h4>
+                        </div>
+                        <div class="modal-body">
+                          <embed src="" type="">
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div id="<%= cert.id %>delete" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                          <p class="center-btn">ARE YOU SURE YOU WANT TO DELETE THIS?</p><br>
+                          <h2 class="text-navy"><%= cert.certification.name %></h2>
+                        </div>
+                        <div class="modal-footer">
+                          <%= link_to "Yes, Delete this.", acquired_certification_path(cert.id), class: 'btn btn-lg btn-danger btn-outline pull-right',
+
+                                      method: :delete,
+                                      confirm: 'Are you sure you want to delete this?' %>
+                          <button type="button" class="btn btn-lg btn-info pull-left" data-dismiss="modal">
+                            No. Do not delete.
+                          </button>
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+
+
                   <td><%= cert.certification.name %></td>
                   <td><%= cert.acquired_on %></td>
                   <td class="text-center">
                     <div class="btn-group">
-                      <%= link_to cert.document.url, class: 'btn btn-info btn-sm btn-outline' do %>
-                        <i class="far fa-file-pdf"></i> PDF
-                      <% end %>
-                      <%= link_to acquiredCertification_path(cert.id), class: 'btn btn-sm btn-danger btn-outline',
-                                  method: :delete,
-                                  confirm: 'Are you sure you want to delete this?' do %>
-                        <i class="fa fa-trash"></i>
-                      <% end %>
+                      <button type="button" class="btn btn-sm btn-default btn-outline" data-toggle="modal" data-target="#<%= cert.id %>">
+                        <i class="far fa-file-pdf"></i>
+                      </button>
+                      <button type="button" class="btn btn-sm btn-default btn-outline" data-toggle="modal" data-target="#<%= cert.id %>delete">
+                        <i class="fas fa-trash-alt"></i>
+                      </button>
                     </div>
                   </td>
                 </tr>
