[add-job-posting][ RJ ] bump

--- a/app/views/certifications/_form.html.erb
+++ b/app/views/certifications/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @certification,
+<%= simple_form_for cert,
                     url: acquired_certifications_path,
                     method: :post,
                     defaults: {inner_html: 'form-control'} do |f| %>
