--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -145,7 +145,7 @@
                     </div>
 
                     <div class="modal-body">
-                      <%= render partial: 'certifications/form', locals: {primary: true} %>
+                      <%= render partial: 'certifications/form', locals: {primary: true, cert: @certification} %>
                     </div>
                     <div class="modal-footer">
 
