--- a/app/views/users/certifications.html.erb
+++ b/app/views/users/certifications.html.erb
@@ -136,7 +136,7 @@
 
                             <% end %>
                           </div>
-                        </div>
+                        </div>I
                         <div class="modal-footer">
                           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </div>
