added privacy policy

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
 <div class="footer">
+  <%= link_to "Privacy Policy", privacy_path %>
   <div class="pull-right">
     <small>Made in America</small>
   </div>
