--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <div class="footer">
-  <%= link_to "Privacy Policy", privacy_path %>
+  <%= link_to "Privacy Policy", privacy_path, class: 'pull-left' %>
+  <%= link_to "Terms of Service", terms_of_service_path, class: 'pull-left' %>
   <div class="pull-right">
     <small>Made in America</small>
   </div>
