--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <div class="footer">
-  <%= link_to "Privacy Policy", privacy_path, class: 'pull-left' %>
-  <%= link_to "Terms of Service", terms_of_service_path, class: 'pull-left' %>
-  <div class="pull-right">
-    <small>Made in America</small>
-  </div>
-  <div>
-    <strong>Copyright</strong> RespondersNOW.com &copy; 2016-2017
-  </div>
+  <nav class="navbar">
+    <ul class="nav">
+      <li class="navbar-text"><%= link_to "Terms of Service", terms_of_service_path, class: 'pull-left' %></li>
+      <li class="navbar-text"><%= link_to "Terms of Use & Privacy Policy", privacy_path %></li>
+      <li class="navbar-text"><a href="#">Copyright RespondersNOW.com &copy; 2016-2018</a></li>
+      <li class="navbar-text"><a href="#">Made in America</a></li>
+    </ul>
+  </nav>
 </div>
